Clean house of unnecessary components

--- a/src/_locales/en_US/messages.json
+++ b/src/_locales/en_US/messages.json
@@ -1,8 +1,8 @@
 {
   "appName": {
-    "message": "Audate - Voice Search"
+    "message": "Search Preview"
   },
   "appDesc": {
-    "message": "Search the web with your voice"
+    "message": "Smooth previews of links and search results"
   }
 }
