--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -1,10 +1,10 @@
 {
   "appName": {
-    "message": "Audate - Voice Search",
+    "message": "Search Preview",
     "description": "The name of the extension"
   },
   "appDesc": {
-    "message": "Search the web with your voice",
+    "message": "Smooth previews of links and search results",
     "description": "A description of its function"
   }
 }
