--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -1,10 +1,10 @@
 {
   "appName": {
-    "message": "Search Preview",
+    "message": "Better Previews",
     "description": "The name of the extension"
   },
   "appDesc": {
-    "message": "Smooth previews of links and search results",
+    "message": "Preview links and search results at the speed of light",
     "description": "A description of its function"
   }
 }
