--- a/src/_locales/et/messages.json
+++ b/src/_locales/et/messages.json
@@ -1,10 +1,10 @@
 {
     "appName": {
-        "message": "Better Previews",
+        "message": "Paremad eelvaated",
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "Perform search and preview links in sidebars instead of opening new tabs",
+        "message": "Uute vahelehtede avamise asemel teostage külgribadel otsingu- ja eelvaate linke",
         "description": "A description of its function"
     }
 }
