--- a/src/_locales/hr/messages.json
+++ b/src/_locales/hr/messages.json
@@ -1,10 +1,10 @@
 {
     "appName": {
-        "message": "Better Previews",
+        "message": "Bolji pregledi",
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "Perform search and preview links in sidebars instead of opening new tabs",
+        "message": "Izvršite linkove za pretraživanje i pregled na bočnim trakama umjesto otvaranja novih kartica",
         "description": "A description of its function"
     }
 }
