--- a/src/_locales/id/messages.json
+++ b/src/_locales/id/messages.json
@@ -1,10 +1,10 @@
 {
     "appName": {
-        "message": "Better Previews",
+        "message": "Pratinjau yang lebih baik",
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "Perform search and preview links in sidebars instead of opening new tabs",
+        "message": "Lakukan tautan pencarian dan pratinjau di bilah samping alih -alih membuka tab baru",
         "description": "A description of its function"
     }
 }
