--- a/src/_locales/ms/messages.json
+++ b/src/_locales/ms/messages.json
@@ -1,10 +1,10 @@
 {
     "appName": {
-        "message": "Better Previews",
+        "message": "Pratonton yang lebih baik",
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "Perform search and preview links in sidebars instead of opening new tabs",
+        "message": "Lakukan pautan carian dan pratonton di sidebars dan bukannya membuka tab baru",
         "description": "A description of its function"
     }
 }
