--- a/src/_locales/no/messages.json
+++ b/src/_locales/no/messages.json
@@ -1,10 +1,10 @@
 {
     "appName": {
-        "message": "Better Previews",
+        "message": "Bedre forhåndsvisninger",
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "Perform search and preview links in sidebars instead of opening new tabs",
+        "message": "Utfør søk og forhåndsvisningskoblinger i sidefelt i stedet for å åpne nye faner",
         "description": "A description of its function"
     }
 }
