--- a/src/_locales/pl/messages.json
+++ b/src/_locales/pl/messages.json
@@ -1,10 +1,10 @@
 {
     "appName": {
-        "message": "Better Previews",
+        "message": "Lepsze podgląd",
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "Perform search and preview links in sidebars instead of opening new tabs",
+        "message": "Wykonaj linki wyszukiwania i podglądu na paskach bocznych zamiast otwierać nowe zakładki",
         "description": "A description of its function"
     }
 }
