--- a/src/_locales/cs/messages.json
+++ b/src/_locales/cs/messages.json
@@ -4,7 +4,7 @@
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "Proveďte odkazy na vyhledávání a náhled v postranních panelech místo otevření nových karet",
+        "message": "Náhled odkazy a výsledky vyhledávání v postranních panelech místo otevření nových karet",
         "description": "A description of its function"
     }
 }
