--- a/src/_locales/gu/messages.json
+++ b/src/_locales/gu/messages.json
@@ -4,7 +4,7 @@
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "નવા ટ s બ્સ ખોલવાને બદલે સાઇડબારમાં શોધ અને પૂર્વાવલોકન લિંક્સ કરો",
+        "message": "નવા ટ s બ્સ ખોલવાને બદલે રેખાઓ અને સાઇડબારમાં શોધ પરિણામો",
         "description": "A description of its function"
     }
 }
