--- a/src/_locales/sw/messages.json
+++ b/src/_locales/sw/messages.json
@@ -4,7 +4,7 @@
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "Fanya Viungo vya Utafutaji na hakiki kwenye barabara za pembeni badala ya kufungua tabo mpya",
+        "message": "Hakiki viungo na matokeo ya utaftaji kwenye barabara za pembeni badala ya kufungua tabo mpya",
         "description": "A description of its function"
     }
 }
