--- a/src/_locales/ta/messages.json
+++ b/src/_locales/ta/messages.json
@@ -4,7 +4,7 @@
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "புதிய தாவல்களைத் திறப்பதற்குப் பதிலாக பக்கப்பட்டிகளில் தேடல் மற்றும் முன்னோட்ட இணைப்புகளைச் செய்யுங்கள்",
+        "message": "புதிய தாவல்களைத் திறப்பதற்குப் பதிலாக பக்கப்பட்டிகளில் இணைப்புகள் மற்றும் தேடல் முடிவுகளை முன்னோட்டமிடுங்கள்",
         "description": "A description of its function"
     }
 }
