--- a/src/_locales/te/messages.json
+++ b/src/_locales/te/messages.json
@@ -4,7 +4,7 @@
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "క్రొత్త ట్యాబ్‌లను తెరవడానికి బదులుగా సైడ్‌బార్స్‌లో శోధన మరియు ప్రివ్యూ లింక్‌లను చేయండి",
+        "message": "క్రొత్త ట్యాబ్‌లను తెరవడానికి బదులుగా సైడ్‌బార్‌లలో లింక్‌లు మరియు శోధన ఫలితాలను పరిదృశ్యం చేయండి",
         "description": "A description of its function"
     }
 }
