--- a/src/_locales/uk/messages.json
+++ b/src/_locales/uk/messages.json
@@ -4,7 +4,7 @@
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "Виконайте посилання на пошук та попередній перегляд на бічних панелях замість того, щоб відкривати нові вкладки",
+        "message": "Попередні посилання та результати пошуку на бічних панелях замість того, щоб відкривати нові вкладки",
         "description": "A description of its function"
     }
 }
