--- a/src/_locales/bg/messages.json
+++ b/src/_locales/bg/messages.json
@@ -4,7 +4,7 @@
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "Извършвайте връзки за търсене и визуализация в страничните ленти, вместо да отваряте нови раздели",
+        "message": "Визуализация на връзките и резултатите от търсенето в страничните ленти, вместо да отваряте нови раздели",
         "description": "A description of its function"
     }
 }
