--- a/src/_locales/el/messages.json
+++ b/src/_locales/el/messages.json
@@ -4,7 +4,7 @@
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "Εκτελέστε συνδέσμους αναζήτησης και προεπισκόπησης σε πλευρικές γραμμές αντί να ανοίξετε νέες καρτέλες",
+        "message": "Προεπισκόπηση συνδέσμων και αποτελέσματα αναζήτησης σε πλευρικές γραμμές αντί να ανοίγουν νέες καρτέλες",
         "description": "A description of its function"
     }
 }
