--- a/src/_locales/es/messages.json
+++ b/src/_locales/es/messages.json
@@ -4,7 +4,7 @@
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "Realice enlaces de búsqueda y vista previa en barras laterales en lugar de abrir nuevas pestañas",
+        "message": "Vista previa de enlaces y resultados de búsqueda en barras laterales en lugar de abrir nuevas pestañas",
         "description": "A description of its function"
     }
 }
