--- a/src/_locales/fa/messages.json
+++ b/src/_locales/fa/messages.json
@@ -4,7 +4,7 @@
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "به جای باز کردن برگه های جدید ، پیوندهای جستجو و پیش نمایش را در نوارهای جانبی انجام دهید",
+        "message": "پیوندهای پیش نمایش و نتایج جستجو به جای باز کردن برگه های جدید",
         "description": "A description of its function"
     }
 }
