--- a/src/_locales/hr/messages.json
+++ b/src/_locales/hr/messages.json
@@ -4,7 +4,7 @@
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "Izvršite linkove za pretraživanje i pregled na bočnim trakama umjesto otvaranja novih kartica",
+        "message": "Pregled veza i rezultata pretraživanja na bočnim trakama umjesto otvaranja novih kartica",
         "description": "A description of its function"
     }
 }
