--- a/src/_locales/it/messages.json
+++ b/src/_locales/it/messages.json
@@ -4,7 +4,7 @@
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "Eseguire i collegamenti di ricerca e anteprima nelle barre laterali invece di aprire nuove schede",
+        "message": "Link di anteprima e risultati di ricerca in barre laterali invece di aprire nuove schede",
         "description": "A description of its function"
     }
 }
