--- a/src/_locales/kn/messages.json
+++ b/src/_locales/kn/messages.json
@@ -4,7 +4,7 @@
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "ಹೊಸ ಟ್ಯಾಬ್‌ಗಳನ್ನು ತೆರೆಯುವ ಬದಲು ಸೈಡ್‌ಬಾರ್‌ಗಳಲ್ಲಿ ಹುಡುಕಾಟ ಮತ್ತು ಪೂರ್ವವೀಕ್ಷಣೆ ಲಿಂಕ್‌ಗಳನ್ನು ನಿರ್ವಹಿಸಿ",
+        "message": "ಹೊಸ ಟ್ಯಾಬ್‌ಗಳನ್ನು ತೆರೆಯುವ ಬದಲು ಸೈಡ್‌ಬಾರ್‌ಗಳಲ್ಲಿ ಲಿಂಕ್‌ಗಳು ಮತ್ತು ಹುಡುಕಾಟ ಫಲಿತಾಂಶಗಳನ್ನು ಪೂರ್ವವೀಕ್ಷಣೆ",
         "description": "A description of its function"
     }
 }
