--- a/src/_locales/ko/messages.json
+++ b/src/_locales/ko/messages.json
@@ -4,7 +4,7 @@
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "새 탭을 여는 대신 사이드 바에서 검색 및 미리보기 링크 수행",
+        "message": "새 탭을 여는 대신 사이드 바에서 링크 미리보기 및 검색 결과",
         "description": "A description of its function"
     }
 }
