--- a/src/_locales/no/messages.json
+++ b/src/_locales/no/messages.json
@@ -4,7 +4,7 @@
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "Utfør søk og forhåndsvisningskoblinger i sidefelt i stedet for å åpne nye faner",
+        "message": "Forhåndsvisningslenker og søkeresultater i sidefelt i stedet for å åpne nye faner",
         "description": "A description of its function"
     }
 }
