--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -4,7 +4,7 @@
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "Выполните ссылки на поиск и предварительный просмотр на боковых панелях вместо открытия новых вкладок",
+        "message": "Предварительный просмотр ссылок и результатов поиска в боковых панелях вместо открытия новых вкладок",
         "description": "A description of its function"
     }
 }
