--- a/src/_locales/sk/messages.json
+++ b/src/_locales/sk/messages.json
@@ -4,7 +4,7 @@
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "Vykonajte odkazy na vyhľadávanie a ukážku v bočných paneloch namiesto otvárania nových kariet",
+        "message": "Ukážka odkazov a výsledky vyhľadávania v bočných paneloch namiesto otvárania nových kariet",
         "description": "A description of its function"
     }
 }
