--- a/src/_locales/bn/messages.json
+++ b/src/_locales/bn/messages.json
@@ -1,10 +1,10 @@
 {
     "appName": {
-        "message": "আরও ভাল পূর্বরূপ",
+        "message": "লিঙ্ক এবং অনুসন্ধান পূর্বরূপ",
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "নতুন ট্যাব খোলার পরিবর্তে সাইডবারগুলিতে পূর্বরূপ লিঙ্কগুলি এবং অনুসন্ধানের ফলাফলগুলি",
+        "message": "পূর্বরূপ লিঙ্কগুলি এবং তাত্ক্ষণিকভাবে নতুন ট্যাবগুলি খোলার পরিবর্তে একই পৃষ্ঠায় অনুসন্ধানগুলি সম্পাদন করে",
         "description": "A description of its function"
     }
 }
