--- a/src/_locales/cs/messages.json
+++ b/src/_locales/cs/messages.json
@@ -1,10 +1,10 @@
 {
     "appName": {
-        "message": "Lepší náhledy",
+        "message": "Odkazy a náhled vyhledávání",
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "Náhled odkazy a výsledky vyhledávání v postranních panelech místo otevření nových karet",
+        "message": "Odkazy na náhled a okamžitě provádí vyhledávání na stejné stránce místo otevření nových karet",
         "description": "A description of its function"
     }
 }
