--- a/src/_locales/el/messages.json
+++ b/src/_locales/el/messages.json
@@ -1,10 +1,10 @@
 {
     "appName": {
-        "message": "Καλύτερες προεπισκοπήσεις",
+        "message": "Σύνδεσμοι και προεπισκόπηση αναζήτησης",
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "Προεπισκόπηση συνδέσμων και αποτελέσματα αναζήτησης σε πλευρικές γραμμές αντί να ανοίγουν νέες καρτέλες",
+        "message": "Προεπισκόπηση συνδέσμων και εκτελεί αμέσως αναζητήσεις στην ίδια σελίδα αντί να ανοίξει νέες καρτέλες",
         "description": "A description of its function"
     }
 }
