--- a/src/_locales/ml/messages.json
+++ b/src/_locales/ml/messages.json
@@ -1,10 +1,10 @@
 {
     "appName": {
-        "message": "മികച്ച പ്രിവ്യൂകൾ",
+        "message": "ലിങ്കുകളും തിരയൽ പ്രിവ്യൂവും",
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "പുതിയ ടാബുകൾ തുറക്കുന്നതിന് പകരം സൈഡ്ബാറുകളിൽ പ്രിവ്യൂ ലിങ്കുകളും തിരയൽ ഫലങ്ങളും",
+        "message": "പ്രിവ്യൂ ലിങ്കുകളും തൽക്ഷണ പ്രവർത്തനങ്ങളും പുതിയ ടാബുകൾ തുറക്കുന്നതിന് പകരം ഒരേ പേജിൽ തിരയുന്നു",
         "description": "A description of its function"
     }
 }
