--- a/src/_locales/ro/messages.json
+++ b/src/_locales/ro/messages.json
@@ -1,10 +1,10 @@
 {
     "appName": {
-        "message": "Previzualizări mai bune",
+        "message": "Link -uri și previzualizare a căutării",
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "Previzualizați linkurile și rezultatele căutării în barele laterale în loc să deschideți noi file",
+        "message": "Previzualizați linkurile și efectuați instantaneu căutări pe aceeași pagină în loc să deschideți noi file",
         "description": "A description of its function"
     }
 }
