--- a/src/_locales/ta/messages.json
+++ b/src/_locales/ta/messages.json
@@ -1,10 +1,10 @@
 {
     "appName": {
-        "message": "சிறந்த முன்னோட்டங்கள்",
+        "message": "இணைப்புகள் மற்றும் தேடல் முன்னோட்டம்",
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "புதிய தாவல்களைத் திறப்பதற்குப் பதிலாக பக்கப்பட்டிகளில் இணைப்புகள் மற்றும் தேடல் முடிவுகளை முன்னோட்டமிடுங்கள்",
+        "message": "புதிய தாவல்களைத் திறப்பதற்கு பதிலாக ஒரே பக்கத்தில் இணைப்புகளை முன்னோட்டமிடுங்கள் மற்றும் உடனடியாக தேடுகிறது",
         "description": "A description of its function"
     }
 }
