--- a/src/_locales/te/messages.json
+++ b/src/_locales/te/messages.json
@@ -1,10 +1,10 @@
 {
     "appName": {
-        "message": "మంచి ప్రివ్యూలు",
+        "message": "లింక్‌లు & శోధన పరిదృశ్యం",
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "క్రొత్త ట్యాబ్‌లను తెరవడానికి బదులుగా సైడ్‌బార్‌లలో లింక్‌లు మరియు శోధన ఫలితాలను పరిదృశ్యం చేయండి",
+        "message": "క్రొత్త ట్యాబ్‌లను తెరవడానికి బదులుగా లింక్‌లను పరిదృశ్యం చేస్తుంది మరియు తక్షణమే ఒకే పేజీలో శోధనలు చేస్తుంది",
         "description": "A description of its function"
     }
 }
