--- a/src/_locales/am/messages.json
+++ b/src/_locales/am/messages.json
@@ -1,10 +1,10 @@
 {
     "appName": {
-        "message": "የተሻሉ ቅድመ-እይታዎች",
+        "message": "አገናኞች እና የፍለጋ ቅድመ እይታ",
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "አዳዲስ ትሮችን ከመክፈት ይልቅ አገናኞች እና የፍለጋ ውጤቶች",
+        "message": "አዳዲስ ትሮችን ከመክፈት ይልቅ አገናኞች እና በቅደም ተከተል አገናኞች እና በቅደም ተከተል የሚከናወኑ ፍለጋዎች",
         "description": "A description of its function"
     }
 }
