--- a/src/_locales/bg/messages.json
+++ b/src/_locales/bg/messages.json
@@ -1,10 +1,10 @@
 {
     "appName": {
-        "message": "По -добри визуализации",
+        "message": "Визуализация на връзки и търсене",
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "Визуализация на връзките и резултатите от търсенето в страничните ленти, вместо да отваряте нови раздели",
+        "message": "Визуализация Връзки и незабавно извършва търсения на една и съща страница, вместо да отваряте нови раздели",
         "description": "A description of its function"
     }
 }
