--- a/src/_locales/ca/messages.json
+++ b/src/_locales/ca/messages.json
@@ -1,10 +1,10 @@
 {
     "appName": {
-        "message": "Millors previsualitzacions",
+        "message": "Enllaços i previsualització de la cerca",
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "Vista prèvia enllaços i resultats de cerca en barres laterals en lloc d’obrir noves pestanyes",
+        "message": "Vista prèvia d’enllaços i realitza de forma instantània les cerques a la mateixa pàgina en lloc d’obrir noves pestanyes",
         "description": "A description of its function"
     }
 }
