--- a/src/_locales/fa/messages.json
+++ b/src/_locales/fa/messages.json
@@ -1,10 +1,10 @@
 {
     "appName": {
-        "message": "پیش نمایش بهتر",
+        "message": "پیوندها و پیش نمایش جستجو",
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "پیوندهای پیش نمایش و نتایج جستجو به جای باز کردن برگه های جدید",
+        "message": "پیوندهای پیش نمایش و فوراً جستجو در همان صفحه به جای باز کردن برگه های جدید انجام می شود",
         "description": "A description of its function"
     }
 }
