--- a/src/_locales/fr/messages.json
+++ b/src/_locales/fr/messages.json
@@ -1,10 +1,10 @@
 {
     "appName": {
-        "message": "Meilleurs aperçus",
+        "message": "Liens et aperçu de la recherche",
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "Aperçu des liens et des résultats de recherche dans les barres latérales au lieu d'ouvrir de nouveaux onglets",
+        "message": "Aperçu des liens et effectue instantanément des recherches sur la même page au lieu d'ouvrir de nouveaux onglets",
         "description": "A description of its function"
     }
 }
