--- a/src/_locales/gu/messages.json
+++ b/src/_locales/gu/messages.json
@@ -1,10 +1,10 @@
 {
     "appName": {
-        "message": "વધુ સારી પૂર્વાવલોકનો",
+        "message": "લિંક્સ અને શોધ પૂર્વાવલોકન",
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "નવા ટ s બ્સ ખોલવાને બદલે રેખાઓ અને સાઇડબારમાં શોધ પરિણામો",
+        "message": "પૂર્વાવલોકન લિંક્સ અને તરત જ નવા ટ s બ્સ ખોલવાને બદલે સમાન પૃષ્ઠ પર શોધ કરે છે",
         "description": "A description of its function"
     }
 }
