--- a/src/_locales/he/messages.json
+++ b/src/_locales/he/messages.json
@@ -1,10 +1,10 @@
 {
     "appName": {
-        "message": "תצוגה מקדימה טובה יותר",
+        "message": "קישורים ותצוגה מקדימה של חיפוש",
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "תצוגה מקדימה של קישורים ותוצאות חיפוש בסרגל הצד במקום פתיחת כרטיסיות חדשות",
+        "message": "תצוגה מקדימה של קישורים ומבצעת מייד חיפושים באותו עמוד במקום לפתוח כרטיסיות חדשות",
         "description": "A description of its function"
     }
 }
