--- a/src/_locales/hi/messages.json
+++ b/src/_locales/hi/messages.json
@@ -1,10 +1,10 @@
 {
     "appName": {
-        "message": "बेहतर पूर्वावलोकन",
+        "message": "लिंक और खोज पूर्वावलोकन",
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "नए टैब खोलने के बजाय साइडबार में लिंक और खोज परिणामों का पूर्वावलोकन करें",
+        "message": "लिंक का पूर्वावलोकन करें और नए टैब खोलने के बजाय एक ही पृष्ठ पर तुरंत खोज करता है",
         "description": "A description of its function"
     }
 }
