--- a/src/_locales/hu/messages.json
+++ b/src/_locales/hu/messages.json
@@ -1,10 +1,10 @@
 {
     "appName": {
-        "message": "Jobb előnézetek",
+        "message": "Linkek és keresési előnézet",
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "Az új lapok megnyitása helyett előnézeti linkek és keresési eredmények oldalsávokban",
+        "message": "Az előnézeti linkek és azonnali kereséseket végez ugyanazon az oldalon, ahelyett, hogy új lapokat nyitnának",
         "description": "A description of its function"
     }
 }
