--- a/src/_locales/id/messages.json
+++ b/src/_locales/id/messages.json
@@ -1,10 +1,10 @@
 {
     "appName": {
-        "message": "Pratinjau yang lebih baik",
+        "message": "Tautan & Pratinjau Pencarian",
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "Tautan pratinjau dan hasil pencarian di bilah samping alih -alih membuka tab baru",
+        "message": "Pratinjau tautan dan langsung melakukan pencarian di halaman yang sama alih -alih membuka tab baru",
         "description": "A description of its function"
     }
 }
