--- a/src/_locales/it/messages.json
+++ b/src/_locales/it/messages.json
@@ -1,10 +1,10 @@
 {
     "appName": {
-        "message": "Migliori anteprime",
+        "message": "Link e anteprima di ricerca",
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "Link di anteprima e risultati di ricerca in barre laterali invece di aprire nuove schede",
+        "message": "Anteprima collegamenti e esegue istantaneamente le ricerche nella stessa pagina invece di aprire nuove schede",
         "description": "A description of its function"
     }
 }
