--- a/src/_locales/ja/messages.json
+++ b/src/_locales/ja/messages.json
@@ -1,10 +1,10 @@
 {
     "appName": {
-        "message": "より良いプレビュー",
+        "message": "リンクと検索プレビュー",
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "新しいタブを開く代わりに、サイドバーでリンクと検索結果をプレビューする",
+        "message": "リンクをプレビューし、新しいタブを開く代わりに同じページで検索を即座に実行します",
         "description": "A description of its function"
     }
 }
