--- a/src/_locales/mr/messages.json
+++ b/src/_locales/mr/messages.json
@@ -1,10 +1,10 @@
 {
     "appName": {
-        "message": "चांगले पूर्वावलोकन",
+        "message": "दुवे आणि शोध पूर्वावलोकन",
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "नवीन टॅब उघडण्याऐवजी साइडबारमध्ये पूर्वावलोकन दुवे आणि शोध परिणाम",
+        "message": "पूर्वावलोकन दुवे आणि त्वरित नवीन टॅब उघडण्याऐवजी त्याच पृष्ठावर शोध घेतात",
         "description": "A description of its function"
     }
 }
