--- a/src/_locales/ms/messages.json
+++ b/src/_locales/ms/messages.json
@@ -1,10 +1,10 @@
 {
     "appName": {
-        "message": "Pratonton yang lebih baik",
+        "message": "Pautan & Pratonton Carian",
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "Pautan pratonton dan hasil carian di bar sisi dan bukannya membuka tab baru",
+        "message": "Pautan pratonton dan dengan serta -merta melakukan carian pada halaman yang sama dan bukannya membuka tab baru",
         "description": "A description of its function"
     }
 }
