--- a/src/_locales/no/messages.json
+++ b/src/_locales/no/messages.json
@@ -1,10 +1,10 @@
 {
     "appName": {
-        "message": "Bedre forhåndsvisninger",
+        "message": "Koblinger og forhåndsvisning av søk",
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "Forhåndsvisningslenker og søkeresultater i sidefelt i stedet for å åpne nye faner",
+        "message": "Forhåndsvisningskoblinger og utfører øyeblikkelig søk på samme side i stedet for å åpne nye faner",
         "description": "A description of its function"
     }
 }
