--- a/src/_locales/pt/messages.json
+++ b/src/_locales/pt/messages.json
@@ -1,10 +1,10 @@
 {
     "appName": {
-        "message": "Melhores visualizações",
+        "message": "Links e visualização de pesquisa",
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "Visualizar links e resultados de pesquisa em barras laterais em vez de abrir novas guias",
+        "message": "Links de visualização e executa instantaneamente pesquisas na mesma página em vez de abrir novas guias",
         "description": "A description of its function"
     }
 }
