--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -1,10 +1,10 @@
 {
     "appName": {
-        "message": "Лучшие превью",
+        "message": "Ссылки и предварительный просмотр поиска",
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "Предварительный просмотр ссылок и результатов поиска в боковых панелях вместо открытия новых вкладок",
+        "message": "Предварительный просмотр ссылок и мгновенно выполняет поиск на той же странице вместо открытия новых вкладок",
         "description": "A description of its function"
     }
 }
