--- a/src/_locales/sl/messages.json
+++ b/src/_locales/sl/messages.json
@@ -1,10 +1,10 @@
 {
     "appName": {
-        "message": "Boljši predogled",
+        "message": "Predogled povezav in iskanja",
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "Predogled povezav in rezultatov iskanja v stranskih vrsticah, namesto da bi odprli nove zavihke",
+        "message": "Predogled povezav in takoj opravlja iskanje na isti strani, namesto da odpre nove zavihke",
         "description": "A description of its function"
     }
 }
