--- a/src/_locales/sr/messages.json
+++ b/src/_locales/sr/messages.json
@@ -1,10 +1,10 @@
 {
     "appName": {
-        "message": "Бољи прегледи",
+        "message": "Линкови и Претраживање претраге",
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "Прегледајте линкове и резултати претраге у бочним тракама уместо отварања нових картица",
+        "message": "Прегледајте линкове и одмах врши претраге на истој страници уместо да отварају нове картице",
         "description": "A description of its function"
     }
 }
