--- a/src/_locales/sw/messages.json
+++ b/src/_locales/sw/messages.json
@@ -1,10 +1,10 @@
 {
     "appName": {
-        "message": "Hakikisho bora",
+        "message": "Viungo na hakiki ya utaftaji",
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "Hakiki viungo na matokeo ya utaftaji kwenye barabara za pembeni badala ya kufungua tabo mpya",
+        "message": "Hakiki viungo na hufanya utaftaji mara moja kwenye ukurasa huo huo badala ya kufungua tabo mpya",
         "description": "A description of its function"
     }
 }
