--- a/src/_locales/th/messages.json
+++ b/src/_locales/th/messages.json
@@ -1,10 +1,10 @@
 {
     "appName": {
-        "message": "ตัวอย่างที่ดีกว่า",
+        "message": "ลิงก์และดูตัวอย่าง",
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "ดูตัวอย่างลิงก์และผลการค้นหาในแถบด้านข้างแทนการเปิดแท็บใหม่",
+        "message": "ลิงก์ดูตัวอย่างและทำการค้นหาในหน้าเดียวกันทันทีแทนที่จะเปิดแท็บใหม่",
         "description": "A description of its function"
     }
 }
