--- a/src/_locales/tr/messages.json
+++ b/src/_locales/tr/messages.json
@@ -1,10 +1,10 @@
 {
     "appName": {
-        "message": "Daha İyi Önizlemeler",
+        "message": "Bağlantılar ve Arama Önizlemesi",
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "Yeni sekmeleri açmak yerine kenar çubuklarında bağlantıları ve arama sonuçlarını önizleme",
+        "message": "Yeni sekmeleri açmak yerine aynı sayfada aramaları önizleme ve anında gerçekleştirir",
         "description": "A description of its function"
     }
 }
