--- a/src/_locales/uk/messages.json
+++ b/src/_locales/uk/messages.json
@@ -1,10 +1,10 @@
 {
     "appName": {
-        "message": "Кращий попередній перегляд",
+        "message": "Посилання та попередній перегляд пошуку",
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "Попередні посилання та результати пошуку на бічних панелях замість того, щоб відкривати нові вкладки",
+        "message": "Попередні посилання та миттєво виконують пошук на одній сторінці, а не відкриваючи нові вкладки",
         "description": "A description of its function"
     }
 }
