--- a/src/_locales/vi/messages.json
+++ b/src/_locales/vi/messages.json
@@ -1,10 +1,10 @@
 {
     "appName": {
-        "message": "Xem trước tốt hơn",
+        "message": "Liên kết & Xem trước tìm kiếm",
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "Xem trước các liên kết và kết quả tìm kiếm trong các thanh bên thay vì mở các tab mới",
+        "message": "Xem trước các liên kết và thực hiện ngay lập tức các tìm kiếm trên cùng một trang thay vì mở các tab mới",
         "description": "A description of its function"
     }
 }
