--- a/src/_locales/zh_TW/messages.json
+++ b/src/_locales/zh_TW/messages.json
@@ -1,10 +1,10 @@
 {
     "appName": {
-        "message": "更好的預覽",
+        "message": "鏈接和搜索預覽",
         "description": "The name of the extension"
     },
     "appDesc": {
-        "message": "預覽鏈接和搜索結果，而不是打開新標籤",
+        "message": "預覽鏈接並立即在同一頁面上執行搜索，而不是打開新標籤",
         "description": "A description of its function"
     }
 }
